fixed colours and spacing for testimonials & CTA

--- a/css/styles.css
+++ b/css/styles.css
@@ -58,8 +58,7 @@ img {
 }
 
 p {
-  margin-top: 1.125em;
-  margin-bottom: 1.125em;
+  margin: 0;
 }
 
 .nav-open {
@@ -436,6 +435,8 @@ h3 {
 
 .section__body-text--intro {
   line-height: 1.85;
+  margin-top: 1.125em;
+  margin-bottom: 1.125em;
 }
 
 @media (min-width: 550px) {
@@ -526,7 +527,7 @@ h3 {
 
 .section__body-text--features {
   grid-area: feature-text;
-  margin: 0.535em 0 0;
+  margin-top: 0.535em;
 }
 
 @media (min-width: 550px) {
@@ -557,7 +558,7 @@ h3 {
   }
 
   .section__body-text--features {
-    margin: 1em 0 0;
+    margin-top: 1em;
   }
 }
 
@@ -573,6 +574,7 @@ h3 {
 /* testimonials */
 
 .testimonials {
+  background-color: var(--clr-deep-jungle-green);
   background-image: url("../images/bg-pattern-home-4-about-3.svg"),
     url("../images/bg-pattern-home-5.svg");
   background-repeat: no-repeat, no-repeat;
@@ -585,15 +587,30 @@ h3 {
   color: var(--clr-rapture-blue);
 }
 
+.subsection__title--testimonials {
+  margin-top: 1.15em;
+}
+
 .testimonials__content-item {
   background-image: url("../images/icon-quotes.svg");
   background-repeat: no-repeat;
   background-position: top center;
+  margin-top: 3em;
+}
+
+.section__body-text--testimonials {
+  padding-top: 2.35em;
+}
+
+.testimonials__subtitle {
+  font-size: 0.8125rem;
+  font-style: italic;
+  margin-top: 0.55em;
 }
 
 .testimonials__content-avatar {
   width: 3.875em;
-  margin: 0 auto;
+  margin: 1em auto 0;
   border-radius: 50%;
   border: 2px solid #c4fffe;
 }
@@ -605,6 +622,16 @@ h3 {
   color: var(--clr-sacremento-state-green);
   background-image: url("../images/bg-pattern-home-6-about-5.svg");
   background-repeat: no-repeat;
-  background-position: bottom left;
+  background-position: bottom -22px left;
   text-align: center;
+}
+
+.section__title--CTA {
+  margin-bottom: 0.75em;
+}
+
+/*footer*/
+
+.footer {
+  background-color: var(--clr-dark-green);
 }
